--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react": "^16.1.1",
+    "react-anime": "^2.0.1",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
