--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "file-loader": "^1.1.5"
   }
 }
