--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.1.1",
     "react-anime": "^2.0.1",
     "react-bootstrap": "^0.31.5",
+    "react-columns": "^1.1.0",
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
