--- a/package.json
+++ b/package.json
@@ -27,16 +27,23 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "react": "^16.1.1",
+    "react": "^16.2.0",
     "react-anime": "^2.0.1",
     "react-bootstrap": "^0.31.5",
-    "react-columns": "^1.1.0",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "file-loader": "^1.1.5"
   }
 }
