--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.16.2",
     "heroku": "^0.2.0",
     "react": "^16.2.0",
+    "file-loader": "^1.1.5",
     "react-anime": "^2.0.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
