--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/caeleanb/caelean#readme",
   "dependencies": {
-    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -34,6 +33,7 @@
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "heroku": "^0.2.0",
+    "nodemon": "^1.18.3",
     "react": "^16.2.0",
     "react-anime": "^2.0.1",
     "react-bootstrap": "^0.31.5",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
